fix: ajuste na visualização do grafico

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,10 +14,10 @@
       
       #graph {
         width: 100%;
-        height: 600px;
+        height: 80vh;
         border: 1px solid #444;
         background-color: #1e1e1e;
-        overflow: scroll;
+        position: relative;
       }
       
       .form-container {
@@ -65,7 +65,7 @@
       }
     </style>
   </head>
-  <body>
+  <body >
     <h1>🌳 Branch & Bound - Programação Inteira (Tema Escuro)</h1>
 
     <div class="form-container">
