--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>🌳 Algoritmos de Otimização</title>
-  <link rel="stylesheet" href="/static/global.css">
+  <link rel="stylesheet" href="/static/styles/global.css">
   <style>
     .container {
       display: flex;
