--- a/templates/tsp.html
+++ b/templates/tsp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Problema do Caixeiro Viajante</title>
-    <link rel="stylesheet" href="/static/global.css">
+    <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="{{ url_for('static', filename='tsp.js') }}"></script>
   </head>
